contact me and others

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       overflow-x: hidden;
     }
   </style>
-  <title>Portfolio Ian Redzio</title>
+  <title>Ian Redzio</title>
 </head>
 
 <body>
